Prevent widgets from overflowing horizontally

--- a/framework.css
+++ b/framework.css
@@ -404,6 +404,10 @@ textarea {
 /*--------------------------------------------------------------
 5.0 General layout
 --------------------------------------------------------------*/
+.site {
+	overflow: hidden;
+}
+
 .site-widgets {
 	padding: 0 10px;
 	width: 100%;
